trunk/tests/kiama/negative/type_errors/L4/10_badarray4.ob
MODULE badarray4;

TYPE
    atype4 = ARRAY 10 OF INTEGER;
    
VAR
    array1 : atype4;
    
BEGIN
    array1 := 1
END badarray4.
